--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,10 @@ env:
 
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
+      - python --version
       - echo Installing
       - apt-get update -y
     finally:
