debug server logs

--- a/greatery/conf/db.yml
+++ b/greatery/conf/db.yml
@@ -3,7 +3,7 @@ local:
     driver: postgres
     username: postgres
     password: password1
-    database: postgres
+    database: greatery
     port: 5432
     min_size: 2
     max_size: 100
