--- a/pipeline/Dockerfile.greatery
+++ b/pipeline/Dockerfile.greatery
@@ -1,4 +1,9 @@
-FROM 597104984438.dkr.ecr.us-east-1.amazonaws.com/greatery:base-latest
+ARG IMAGE_TAG
+ARG AWS_ACCOUNT_ID
+ARG IMAGE_REPO_NAME
+ARG AWS_DEFAULT_REGION
+
+FROM ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/greatery:base-${IMAGE_TAG}
 
 WORKDIR /home/ec2-user
 ENV PYTHONPATH=/home/ec2-user
