--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,17 +11,18 @@ phases:
   pre_build:
     commands:
       - echo Logging into Amazon ECR
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - $(aws ecr get-login --no-include-email --region ${AWS_DEFAULT_REGION})
   build:
     commands:
       - echo Building on `date`
       - echo Root directory `ls`
-      # - docker build -t $IMAGE_REPO_NAME:base-$IMAGE_TAG -f pipeline/Dockerfile.base .
-      # - docker tag $IMAGE_REPO_NAME:base-$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:base-$IMAGE_TAG
-      - docker build --build-arg IMAGE_REPO_NAME=${IMAGE_REPO_NAME} --build-arg IMAGE_TAG=${IMAGE_TAG} --build-arg AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID} --build-arg AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} -t $IMAGE_REPO_NAME:greatery-$IMAGE_TAG -f pipeline/Dockerfile.greatery .
-      - docker tag $IMAGE_REPO_NAME:greatery-$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:greatery-$IMAGE_TAG
+      - docker build -t ${IMAGE_REPO_NAME}:base-${IMAGE_TAG} -f pipeline/Dockerfile.base .
+      - docker tag ${IMAGE_REPO_NAME}:base-${IMAGE_TAG} ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:base-${IMAGE_TAG}
+      - docker build --build-arg IMAGE_REPO_NAME=${IMAGE_REPO_NAME} --build-arg IMAGE_TAG=${IMAGE_TAG} --build-arg AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID} --build-arg AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} -t ${IMAGE_REPO_NAME}:${IMAGE_TAG} -f pipeline/Dockerfile.greatery .
+      - docker tag ${IMAGE_REPO_NAME}:${IMAGE_TAG} ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
   post_build:
     commands:
       - echo Build completed `date`
       - echo Pushing docker image
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:greatery-$IMAGE_TAG
+      - docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:base-${IMAGE_TAG}
+      - docker push ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
