--- a/pipeline/Dockerfile.greatery
+++ b/pipeline/Dockerfile.greatery
@@ -11,10 +11,12 @@ ENV PYTHONPATH=/home/ec2-user
 COPY --chown=ec2-user sprout/ sprout/
 COPY --chown=ec2-user onion/ onion/
 COPY --chown=ec2-user greatery/ greatery/
+COPY --chown=ec2-user requirements.txt requirements.txt
+COPY --chown=ec2-user setup.py setup.py
 
 RUN cd sprout && pip install -e .
 RUN cd onion && pip install -e .
-RUN cd greatery && pip install -e .
+RUN pip install -e .
 
 USER ec2-user
 
